[tool.poetry]
name = "blog_mkdocs"
version = "0.1.0"
description = ""
authors = ["Riley Shea <RileyMShea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^4.6.0"
mkdocs-git-revision-date-localized-plugin = "^0.4.5"
pheasant = "^2.3.0"
pre-commit = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
